--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,6 +1,67 @@
 body {
   background-image: url("images/tests.jpg");
 }
+.topnav .search-container {
+  float: left;
+}
+
+.topnav input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+}
+
+.topnav .search-container button {
+  float: left;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: rgb(202, 26, 149);
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .search-container button:hover {
+  background: rgb(202, 24, 24);
+}
+
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 8px 8px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+.Search {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #4CAF50;
+}
+
+.Search:hover {
+  background-color: #4CAF50;
+  color: white;
+}
+
+#Directions{
+  background-color: white; 
+  color: black; 
+  border: 2px solid rgb(38, 137, 219);
+}
+#Directions:hover {
+  background-color: rgb(38, 137, 219);;
+  color: white;
+}
+
+
 .sidenav {
   height: 100%;
   width: 250px;
