--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -9,7 +9,7 @@ body {
 .topnav input[type=text] {
   padding: 6px;
   margin-top: 8px;
-  font-size: 17px;
+  font-size: 12px;
   border: none;
 }
 
@@ -17,9 +17,8 @@ body {
   float: right;
   padding: 6px 10px;
   margin-top: 8px;
-  margin-right: 16px;
   background: rgb(211, 206, 209);
-  font-size: 17px;
+  font-size: 12px;
   border: none;
   cursor: pointer;
 }
@@ -32,7 +31,8 @@ body {
   background-color: #4CAF50;
   border: none;
   color: white;
-  padding: 8px 8px;
+  padding: 6px 10px;
+  margin-top: 8px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -43,19 +43,19 @@ body {
 }
 
 #directions{
-  background-color: white; 
+  background-color: rgb(211, 206, 209); 
+  margin-top: 8px;
   color: black; 
-  border: 2px solid rgb(38, 137, 219);
 }
 
 #directions:hover {
-  background-color: rgb(38, 137, 219);;
+  background-color: rgb(38, 137, 219);
   color: white;
 }
 
 .sidenav {
   height: 100%;
-  width: 450px;
+  width: 20%;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -84,9 +84,8 @@ body {
 }
 
 div.switch_div {
-  position: absolute;
-  right: 150px;  
-  width: 400px;
+  float: right;  
+  width: 300px;
   height: 200px;
   border: 3px solid green;
 }
