Add fake functionality for search term "wagga wagga"

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -59,6 +59,11 @@ body {
   visibility: hidden;
 }
 
+#location-info {
+  color: grey;
+  visibility: hidden;
+}
+
 #route-info {
   background-color: white;
   border: 2px solid grey;
