Add map widget, page formatting currently broken

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,7 +1,22 @@
 body {
-  background-image: url("images/nsw_gradient.png");
+  /* background-image: url("images/nsw_gradient.png");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
+  color: black;
+}
+
+/* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+#map {
+  height: 100%;
+}
+
+/* Optional: Makes the sample page fill the window. */
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .topnav .search-container {
