Condense open & close sidebar buttons into one button

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -74,15 +74,10 @@ body {
   visibility: hidden;
 }
 
-#close-sidebar {
-  position:fixed;
-  top: 5px;
-}
-
-#open-sidebar {
-  display: none;
+#toggle-sidebar {
   position: fixed;
   top: 5px;
+  left: 300px;
 }
 
 #sidebar {
