Move map control css into style.css

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -6,6 +6,25 @@ body {
   height: 100%;
 }
 
+.mapControlUI {
+  background-color: #fff;
+  border: 2px solid #fff;
+  border-radius: 3px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, .3);
+  cursor: pointer;
+  margin: 10px;
+  text-align: center;
+}
+
+.mapControlText {
+  color: rgb(25,25,25);
+  font-family: Roboto,Arial,sans-serif;
+  font-size: 16px;
+  line-height: 38px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 /* Makes the map fill the window. */
 html,
 body {
