--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -106,7 +106,7 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: #fff;
   overflow-x: hidden;
   padding-top: 20px;
 }
