--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -2,6 +2,10 @@ body {
   color: black;
 }
 
+.flex-container {
+    display: flex
+}
+
 #map {
   height: 100%;
 }
@@ -11,7 +15,6 @@ body {
   border: 2px solid #fff;
   border-radius: 3px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, .3);
-  cursor: pointer;
   margin: 10px;
   text-align: center;
 }
@@ -34,7 +37,9 @@ body {
 }
 
 .topnav .search-container {
-  float: left;
+  box-shadow: 0 2px 4px rgb(0 0 0 / 20%), 0 -1px 0px rgb(0 0 0 / 2%);
+  display: flex;
+  margin: 0 10px 0 10px;
 }
 
 .topnav input[type=text] {
@@ -45,42 +50,28 @@ body {
 }
 
 .topnav .search-container button {
-  float: right;
+  color: grey;
+  flex-grow: 0;
   padding: 6px 10px;
   margin-top: 8px;
-  background: rgb(211, 206, 209);
   font-size: 12px;
   border: none;
-  cursor: pointer;
 }
 
-.topnav .search-container button:hover {
-  background: rgb(202, 24, 24);
-}
-
-.button {
-  background-color: #4CAF50;
+button {
   border: none;
-  color: white;
   padding: 6px 10px;
   margin-top: 8px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
   font-size: 12px;
   margin: 4px 2px;
   transition-duration: 0.4s;
   cursor: pointer;
 }
 
-#directions{
-  background-color: rgb(211, 206, 209); 
-  margin-top: 8px;
-  color: black; 
-}
-
-#directions:hover {
-  background-color: rgb(38, 137, 219);
+button:hover {
+  background-color: darkgrey;
   color: white;
 }
 
@@ -93,13 +84,27 @@ body {
   visibility: hidden;
 }
 
+#location-search-bar {
+  flex-grow: 1;
+}
+
+.feature-button {
+  flex: 1;
+  margin: 10px 5px 0 5px;
+}
+
 #toggle-sidebar {
+  box-shadow: 0 2px 6px rgba(0, 0, 0, .3);
+  margin: 0;
+  padding: 5px 0 5px 0;
   position: fixed;
   top: 5px;
   left: 300px;
+  z-index: 1;
 }
 
 #sidebar {
+  box-shadow: 0 2px 6px rgba(0, 0, 0, .3);
   height: 100%;
   width: 300px;
   position: fixed;
