--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -88,6 +88,14 @@ button:hover {
   flex-grow: 1;
 }
 
+#origin-search-bar {
+  flex-grow: 1;
+}
+
+#origin-search-bar {
+  flex-grow: 1;
+}
+
 .feature-button {
   flex: 1;
   margin: 10px 5px 0 5px;
@@ -115,6 +123,34 @@ button:hover {
   background-color: #fff;
   overflow-x: hidden;
   padding-top: 20px;
+}
+
+.userInput {
+  margin-top: 10px;
+  border: 1px solid transparent;
+  border-radius: 2px 0 0 2px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  height: 32px;
+  outline: none;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
+
+#origin-input,
+#destination-input {
+  background-color: #fff;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+  margin-left: 12px;
+  padding: 0 11px 0 13px;
+  text-overflow: ellipsis;
+  width: 200px;
+}
+
+#origin-input:focus,
+#destination-input:focus {
+  border-color: #4d90fe;
 }
 
 .main {
