working autocomplete waypoint. cleaned up code, style.

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -45,7 +45,9 @@ body {
 .topnav input[type=text] {
   padding: 6px;
   margin-top: 8px;
-  font-size: 12px;
+  font-size: 14px;
+  text-overflow: ellipsis;
+  font-family: Roboto;
   border: none;
 }
 
@@ -115,6 +117,24 @@ button:hover {
   background-color: #fff;
   overflow-x: hidden;
   padding-top: 20px;
+}
+.waypointInput {
+  background-color: #fff;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 300;
+  margin-left: 10px;
+  padding: 0 11px 0 13px;
+  text-overflow: ellipsis;
+  width: 200px;
+  margin: 5px 10px 5px 10px;
+  border: 1px solid transparent;
+  border-radius: 2px 0 0 2px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  height: 32px;
+  outline: none;
+  box-shadow: 0 2px 4px rgb(0 0 0 / 20%), 0 -1px 0px rgb(0 0 0 / 2%);
 }
 
 .userInput {
