--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -93,6 +93,9 @@ button:hover {
 .feature-button {
   flex: 1;
   margin: 10px 10px 5px 10px;
+  font-family: Roboto;
+  font-size: 12px;
+  font-weight: 300;
 }
 
 #toggle-sidebar {
