--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -91,6 +91,10 @@ button:hover {
   flex-grow: 1;
 }
 
+#waypoint-note {
+  margin-left: 10px;
+}
+
 .feature-button {
   flex: 1;
   margin: 10px 10px 5px 10px;
